# SpotVision-AI

./: About.py  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
articles/: Complete Spotvision.psd  New Project (1).psd  New Project.psd  SpotVision Logopsd (2).psd  SpotVision Logopsd (3).psd
model/: 01_dataset.ipynb  Custom_Model_Final.ipynb  Efficient_Net.ipynb  HR_Net.ipynb  InceptionV3.h5  Test_model.ipynb  best_model_inception_v2.h5  class_indices.txt  model.h5  notebook.ipynb  notebook_new.ipynb
pages/: 2_Demo.py  3_Articles.py
